--- a/src/jss/package.json
+++ b/src/jss/package.json
@@ -48,13 +48,13 @@
     "isomorphic-fetch": "~2.2.1",
     "react": "~16.7.0",
     "react-apollo": "~2.3.3",
-    "react-dinosaur-game": "^1.0.0",
     "react-dom": "~16.7.0",
     "react-helmet": "~5.2.0",
     "react-i18next": "~9.0.2",
     "react-router-dom": "~4.3.1",
     "react-scripts": "2.1.3",
-    "serialize-javascript": "~1.6.1"
+    "serialize-javascript": "~1.6.1",
+    "semantic-ui-react": "0.83.0"
   },
   "devDependencies": {
     "@babel/register": "~7.0.0",
