Fix Apikeys serialization

--- a/src/dotnet/Foundation/Serialization/website/App_Config/Include/Foundation/Hackathon.Dinocore.Foundation.Serialization.config
+++ b/src/dotnet/Foundation/Serialization/website/App_Config/Include/Foundation/Hackathon.Dinocore.Foundation.Serialization.config
@@ -8,7 +8,7 @@
                         <include name="Project.Templates" database="master" path="/sitecore/templates/Project">
                             <exclude children="true" />
                         </include>
-                        <include name="Project.ApiKeys" database="master" path="/sitecore/system/Settings/Services/API Keys/Project/Dinocore">
+                        <include name="Project.ApiKeys" database="master" path="/sitecore/system/Settings/Services/API Keys/Project">
                             <exclude children="true" />
                         </include>
                         <!--<include name="Foundation.Templates" database="master" path="/sitecore/templates/Foundation/Dinocore">
