--- a/src/dotnet/Foundation/Serialization/serialization/Project.ApiKeys/Project.yml
+++ b/src/dotnet/Foundation/Serialization/serialization/Project.ApiKeys/Project.yml
@@ -1,8 +1,8 @@
 ﻿---
-ID: "32a74f35-ba1e-408a-89d8-b4e044bb1987"
-Parent: "e2590260-472e-473e-a0cc-d5bc038c57e6"
+ID: "e2590260-472e-473e-a0cc-d5bc038c57e6"
+Parent: "59b41b5f-e22e-460b-941e-fb64fe8da8fc"
 Template: "a87a00b1-e6db-45ab-8b54-636fec3b5523"
-Path: /sitecore/system/Settings/Services/API Keys/Project/Dinocore
+Path: /sitecore/system/Settings/Services/API Keys/Project
 DB: master
 Languages:
 - Language: en
@@ -11,4 +11,4 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20190302T045009Z
+      Value: 20190302T045503Z
