--- a/src/dotnet/Feature/Highscores/website/Hackathon.Dinocore.Feature.Highscores.csproj
+++ b/src/dotnet/Feature/Highscores/website/Hackathon.Dinocore.Feature.Highscores.csproj
@@ -70,8 +70,8 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Config\Include\Feature\Hackathon.Dinocore.Feature.Collection.config" />
-    <Content Include="App_Config\Include\Feature\Hackathon.Dinocore.Feature.Collection.Serialization.config" />
+    <Content Include="App_Config\Include\Feature\Hackathon.Dinocore.Feature.Highscores.config" />
+    <Content Include="App_Config\Include\Feature\Hackathon.Dinocore.Feature.Highscores.Serialization.config" />
     <None Include="Properties\PublishProfiles\Local.pubxml" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
@@ -87,7 +87,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Templates.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Views\web.config" />
