--- a/src/dotnet/Feature/Highscores/website/Hackathon.Dinocore.Feature.Highscores.csproj
+++ b/src/dotnet/Feature/Highscores/website/Hackathon.Dinocore.Feature.Highscores.csproj
@@ -10,8 +10,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Hackathon.Dinocore.Feature.Collection</RootNamespace>
-    <AssemblyName>Hackathon.Dinocore.Feature.Collection</AssemblyName>
+    <RootNamespace>Hackathon.Dinocore.Feature.Highscores</RootNamespace>
+    <AssemblyName>Hackathon.Dinocore.Feature.Highscores</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
@@ -50,6 +50,9 @@
     <PackageReference Include="Microsoft.Web.Infrastructure" Version="1.0.0.0" />
     <PackageReference Include="Sitecore.Kernel" Version="9.1.0" />
     <PackageReference Include="Sitecore.Mvc" Version="9.1.0" />
+    <PackageReference Include="Sitecore.Services.GraphQL">
+      <Version>1.1.3</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
@@ -86,16 +89,11 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Highscore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\DinocoreSchemaProvider.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="Views\web.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
-    <Folder Include="Views\Collection\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
