Add Highcsores templates, content and unicorn config

--- a/src/dotnet/Feature/Highscores/website/App_Config/Include/Feature/Hackathon.Dinocore.Feature.Highscores.Serialization.config
+++ b/src/dotnet/Feature/Highscores/website/App_Config/Include/Feature/Hackathon.Dinocore.Feature.Highscores.Serialization.config
@@ -2,9 +2,9 @@
   <sitecore>
     <unicorn>
       <configurations>
-        <configuration name="Feature.Collection" description="Collection definition items" dependencies="Foundation.Serialization" patch:after="configuration[@name='Foundation.Serialization']" extends="Helix.Foundation">
+        <configuration name="Feature.Highscores" description="Highscores definition items" dependencies="Foundation.Serialization" patch:after="configuration[@name='Foundation.Serialization']" extends="Helix.Foundation">
           <predicate type="Unicorn.Predicates.SerializationPresetPredicate, Unicorn" singleInstance="true">
-            
+              <include name="Templates" database="master" path="/sitecore/templates/Feature/Highscores" />
           </predicate>
         </configuration>
       </configurations>
