--- a/src/dotnet/Project/Dinocore/website/App_Config/Include/Project/Hackathon.Dinocore.Project.Dinocore.Serialization.config
+++ b/src/dotnet/Project/Dinocore/website/App_Config/Include/Project/Hackathon.Dinocore.Project.Dinocore.Serialization.config
@@ -2,11 +2,10 @@
   <sitecore>
     <unicorn>
       <configurations>
-        <configuration name="Project.Dinocore" description="Dinocore definition items" dependencies="Foundation.Serialization" patch:after="configuration[@name='Foundation.Serialization']" extends="Helix.Foundation">
+        <configuration name="Project.Dinocore" description="Dinocore definition items" dependencies="Foundation.Serialization, Feature.Highscores" patch:after="configuration[@name='Foundation.Serialization']" extends="Helix.Foundation">
           <predicate type="Unicorn.Predicates.SerializationPresetPredicate, Unicorn" singleInstance="true">
-            <!--<include name="Templates" database="master" path="/sitecore/templates/project/Dinocore" />
-            <include name="Renderings" database="master" path="/sitecore/layout/renderings/project/Dinocore" />-->
-            <include name="ApiKeys" database="master" path="/sitecore/system/Settings/Services/API Keys/Project/Dinocore" />
+            <include name="Content" database="master" path="/sitecore/content/Highscores" />
+            <include name="ApiKeys" database="master" path="/sitecore/system/Settings/Services/API Keys" />
           </predicate>
         </configuration>
       </configurations>
