Add contentsearch api for highscores graphql query

--- a/src/dotnet/Foundation/Serialization/website/App_Config/Include/Foundation/Hackathon.Dinocore.Foundation.Serialization.config
+++ b/src/dotnet/Foundation/Serialization/website/App_Config/Include/Foundation/Hackathon.Dinocore.Foundation.Serialization.config
@@ -4,6 +4,7 @@
         <unicorn>
             <configurations>
                 <configuration name="Foundation.Serialization" description="Includes the root tenant folder." extends="Helix.Foundation">
+                    <syncConfiguration updateSearchIndex="true" />
                     <predicate type="Unicorn.Predicates.SerializationPresetPredicate, Unicorn" singleInstance="true">
                         <include name="Project.Templates" database="master" path="/sitecore/templates/Project">
                             <exclude children="true" />
