--- a/src/dotnet/Feature/Highscores/website/Hackathon.Dinocore.Feature.Highscores.csproj
+++ b/src/dotnet/Feature/Highscores/website/Hackathon.Dinocore.Feature.Highscores.csproj
@@ -48,7 +48,10 @@
     <PackageReference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" Version="1.0.3" />
     <PackageReference Include="Microsoft.Net.Compilers" Version="1.3.2" />
     <PackageReference Include="Microsoft.Web.Infrastructure" Version="1.0.0.0" />
-    <PackageReference Include="Sitecore.Kernel" Version="9.1.0" />
+    <PackageReference Include="Sitecore.ContentSearch">
+      <Version>9.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="Sitecore.Kernel" Version="12.0.0" />
     <PackageReference Include="Sitecore.Mvc" Version="9.1.0" />
     <PackageReference Include="Sitecore.Services.GraphQL">
       <Version>1.1.3</Version>
@@ -92,6 +95,8 @@
     <Compile Include="Models\Highscore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\DinocoreSchemaProvider.cs" />
+    <Compile Include="Providers\HighscoreSearchResultItem.cs" />
+    <Compile Include="Providers\Templates.cs" />
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
