--- a/src/jss/sitecore/config/dinocore.config
+++ b/src/jss/sitecore/config/dinocore.config
@@ -32,7 +32,7 @@
       <site patch:before="site[@name='website']"
             inherits="website"
             name="dinocore"
-            hostName="dinocore.dev.local"
+            hostName="dinocore.sc"
             rootPath="/sitecore/content/dinocore"
             startItem="/home"
             database="master" />
