Added the package and its definition

--- a/src/jss/sitecore/config/dinocore.config
+++ b/src/jss/sitecore/config/dinocore.config
@@ -29,10 +29,7 @@
         but disables workflow and publishing. Before going to production, change the `database`
         below to `web` instead of `master`.
       -->
-      <site patch:before="site[@name='website']"
-            inherits="website"
-            name="dinocore"
-            hostName="dinocore.sc"
+      <site name="website"
             rootPath="/sitecore/content/dinocore"
             startItem="/home"
             database="master" />
