connecting api to front end

--- a/src/jss/data/routes/en.yml
+++ b/src/jss/data/routes/en.yml
@@ -20,4 +20,4 @@ fields:
 # root placeholder names are defined in the package.json config section (required for Sitecore deployment)
 placeholders:
   jss-main:
-  - componentName: ContentBlock
+  - componentName: GameComponent
