--- a/src/jss/package.json
+++ b/src/jss/package.json
@@ -32,29 +32,26 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@sitecore-jss/sitecore-jss-react": "^11.0.2",
-    "@sitecore-jss/sitecore-jss-tracking": "^11.0.2",
     "apollo-cache-inmemory": "~1.3.12",
     "apollo-client": "~2.4.8",
     "apollo-link": "~1.2.6",
-    "apollo-link-batch-http": "~1.2.6",
     "apollo-link-http": "~1.5.9",
-    "apollo-link-persisted-queries": "~0.2.2",
     "axios": "~0.18.0",
-    "bootstrap": "~4.2.1",
+    "bootstrap": "~4.3.1",
     "graphql": "~14.0.2",
     "graphql-tag": "~2.10.0",
     "i18next": "~13.1.2",
     "i18next-fetch-backend": "~2.0.0",
     "isomorphic-fetch": "~2.2.1",
+    "jquery": "^3.4.0",
+    "popper.js": "^1.14.7",
     "react": "~16.7.0",
-    "react-apollo": "~2.3.3",
     "react-dom": "~16.7.0",
     "react-helmet": "~5.2.0",
     "react-i18next": "~9.0.2",
     "react-router-dom": "~4.3.1",
     "react-scripts": "2.1.3",
-    "serialize-javascript": "~1.6.1",
-    "semantic-ui-react": "0.83.0"
+    "serialize-javascript": "~1.6.1"
   },
   "devDependencies": {
     "@babel/register": "~7.0.0",
