--- a/src/dotnet/Project/Dinocore/website/Hackathon.Dinocore.Project.Dinocore.Website.csproj
+++ b/src/dotnet/Project/Dinocore/website/Hackathon.Dinocore.Project.Dinocore.Website.csproj
@@ -42,7 +42,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Content Include="App_Config\Include\Project\Hackathon.Dinocore.Project.Dinocore.config" />
     <Content Include="App_Config\Include\Project\Hackathon.Dinocore.Project.Dinocore.Serialization.config" />
     <Content Include="App_Config\Include\Project\z.Common.Website.DevSettings.config" />
     <None Include="Properties\PublishProfiles\Local.pubxml" />
@@ -61,14 +60,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="Views\web.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
-    <Folder Include="Views\Dinocore\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
