Fix path in config file.

--- a/src/jss/scjssconfig.json
+++ b/src/jss/scjssconfig.json
@@ -1,6 +1,6 @@
 {
   "sitecore": {
-    "instancePath": "C:\\inetpub\\wwwroot\\hackathon.sc",
+    "instancePath": "C:\\inetpub\\wwwroot\\dinocore.sc",
     "apiKey": "{5339D3FA-E63B-4FFF-9349-CC2C76413C47}",
     "deploySecret": "9d9v4klsayugzbpn7knzsjjk70bto92g5hmeypaw5x3",
     "deployUrl": "http://dinocore.sc/sitecore/api/jss/import",
